[gd_scene load_steps=21 format=2]

[ext_resource path="res://prefabs/world_volume.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/green_world_volume.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/world_barrier_volume.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/wind_volume.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/arena_frustum.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/arena_dome.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/world/pipe_curve_long.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/world/pipe_short.tscn" type="PackedScene" id=9]
[ext_resource path="res://zqf/block_to_mesh.gd" type="Script" id=10]
[ext_resource path="res://zqf/mesh_generator.gd" type="Script" id=11]
[ext_resource path="res://shared/materials/mat_ground.tres" type="Material" id=12]
[ext_resource path="res://shared/materials/mat_wall.tres" type="Material" id=13]
[ext_resource path="res://shared/materials/mat_ceiling.tres" type="Material" id=14]
[ext_resource path="res://prefabs/arena_hemisphere.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefabs/actors/turret.tscn" type="PackedScene" id=16]
[ext_resource path="res://prefabs/projectiles/prj_block.tscn" type="PackedScene" id=17]
[ext_resource path="res://prefabs/ocean.tscn" type="PackedScene" id=18]
[ext_resource path="res://prefabs/arena_cylinder.tscn" type="PackedScene" id=19]
[ext_resource path="res://island_fog_env.tres" type="Environment" id=20]

[node name="test_level" type="Spatial"]

[node name="world_mesh" type="Spatial" parent="."]
script = ExtResource( 10 )
groundMaterial = ExtResource( 12 )

[node name="volumes" type="Spatial" parent="world_mesh"]

[node name="green_world_volume" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 48, 0, 0, 0, 1, 0, 0, 0, 48, 0, -0.5, 0 )

[node name="green_world_volume5" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 33 )

[node name="green_world_volume2" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, 0, -1.5, 0 )

[node name="green_world_volume3" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, 0, -1.5, -256 )

[node name="green_world_volume6" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 256, 0, 62.5, -512 )

[node name="green_world_volume7" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 256, 256, 62.5, -512 )

[node name="green_world_volume8" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 256, 256, 62.5, 0 )

[node name="green_world_volume9" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 256, 512, 62.5, -256 )

[node name="green_world_volume10" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 256, 256, -65, -256 )

[node name="green_world_volume4" parent="world_mesh/volumes" instance=ExtResource( 3 )]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, -256, -1.5, -256 )

[node name="world_volume2" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 16, 0, 0, 0, 1, -8, 7.5, 12 )

[node name="world_volume3" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 16, 0, 0, 0, 1, 11, 7.5, 12 )

[node name="world_volume6" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 64, 0, 0, 0, 8, 108, 30, 106 )

[node name="world_volume8" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 64, 0, 0, 0, 8, -84, 30, 106 )

[node name="world_volume9" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 64, 0, 0, 0, 8, 108, 30, -114 )

[node name="world_volume10" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 64, 0, 0, 0, 8, -84, 30, -114 )

[node name="world_volume4" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 16, 0, 0, 0, 1, 1, 7.5, -16 )

[node name="world_volume5" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 16, 0, 0, 0, 1, 11, 7.5, -3 )

[node name="world_volume7" parent="world_mesh/volumes" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 16, 0, 0, 0, 1, -8, 7.5, -5 )

[node name="mesh_ground" type="MeshInstance" parent="world_mesh"]
script = ExtResource( 11 )

[node name="mesh_ceiling" type="MeshInstance" parent="world_mesh"]
script = ExtResource( 11 )
material = ExtResource( 14 )

[node name="mesh_sides" type="MeshInstance" parent="world_mesh"]
script = ExtResource( 11 )
material = ExtResource( 13 )

[node name="world_static" type="Spatial" parent="."]

[node name="MeshInstance" parent="world_static" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 35, 0 )

[node name="MeshInstance3" parent="world_static" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 35, -25 )

[node name="MeshInstance2" parent="world_static" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 67, 0 )

[node name="world_barrier_volume6" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4.5, 33 )

[node name="world_barrier_volume" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 128, 0, 0, 0, 256, 128.5, 62, 280 )

[node name="world_barrier_volume2" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 128, 0, 0, 0, 256, -128.5, 62, 280 )

[node name="world_barrier_volume3" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 1, 0, 192, 151.5 )

[node name="world_barrier_volume4" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 256, 0, 0, 0, 128, 0, 0, 0, 1, 0, 62, 408.5 )

[node name="world_barrier_volume5" parent="world_static" instance=ExtResource( 4 )]
transform = Transform( 256, 0, 0, 0, 1, 0, 0, 0, 256, 0, 126, 280 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 8, 0 )
shadow_enabled = true
directional_shadow_max_distance = 500.0

[node name="wind_volume" parent="." instance=ExtResource( 5 )]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 22, 0 )

[node name="wind_volume3" parent="." instance=ExtResource( 5 )]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 22, -25 )

[node name="wind_volume2" parent="." instance=ExtResource( 5 )]
transform = Transform( -2.62268e-07, 6, 0, -6, -2.62268e-07, 0, 0, 0, 6, 26, 8, 7 )

[node name="arena_frustum" parent="." instance=ExtResource( 6 )]
transform = Transform( -16, 0, 2.08538e-05, 0, 16, 0, -5.21346e-06, 0, -64, -50, 18, -250 )

[node name="arena_dome" parent="." instance=ExtResource( 7 )]
transform = Transform( 24, 0, 0, 0, 24, 0, 0, 0, 24, 15, 33, -179 )

[node name="actors" type="Spatial" parent="."]

[node name="player" parent="actors" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )

[node name="dome_arena" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -168, -1, -147 )

[node name="turret1" parent="dome_arena" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52588e-05, 12, 0 )
targetName = "turret1"
ignoreAimY = true

[node name="turret2" parent="dome_arena" instance=ExtResource( 16 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 118, 20, -38 )
targetName = "turret2"
projectileRollRate = 22.5
alternateRoll = true
ignoreAimX = true
ignoreAimY = true
ignoreAimZ = true

[node name="prj_ball_large" parent="dome_arena" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 6, 0, 0, 0, 32, 1.52588e-05, 6, 0 )

[node name="prj_ball_large2" parent="dome_arena" instance=ExtResource( 17 )]
transform = Transform( 32, 0, 0, 0, 6, 0, 0, 0, 1, 1.52588e-05, 18, 0 )

[node name="arena_dome2" parent="dome_arena" instance=ExtResource( 15 )]
transform = Transform( 32, 0, 0, 0, 32, 0, 0, 0, 32, 1.52588e-05, 0, 0 )

[node name="ocean_container" type="Spatial" parent="."]

[node name="ocean" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 0, -2, 0 )

[node name="ocean2" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 0, -2, 1024 )

[node name="ocean3" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 1024, -2, 1024 )

[node name="ocean4" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 1024, -2, 0 )

[node name="ocean5" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 0, -2, -1024 )

[node name="ocean6" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, 1024, -2, -1024 )

[node name="ocean7" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, -1023, -2, 1024 )

[node name="ocean8" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, -1023, -2, 0 )

[node name="ocean9" parent="ocean_container" instance=ExtResource( 18 )]
transform = Transform( 1024, 0, 0, 0, 1, 0, 0, 0, 1024, -1023, -2, -1024 )

[node name="arena_cylinder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -278, 15, -173 )

[node name="arena_cylinder" parent="arena_cylinder" instance=ExtResource( 19 )]
transform = Transform( 32, 0, 0, 0, 16, 0, 0, 0, 32, 0, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 20 )
